--- a/src/platform/qpg/BUILD.gn
+++ b/src/platform/qpg/BUILD.gn
@@ -40,6 +40,27 @@ static_library("qpg") {
     "DeviceNetworkProvisioningDelegateImpl.h",
     "DiagnosticDataProviderImpl.cpp",
     "DiagnosticDataProviderImpl.h",
+    "examples/qorvo_pai_key_publ_key.c",
+    "examples/qorvo_pai_key_priv_key.c",
+    "examples/qorvo_pai_cert.c",
+    "examples/qorvo_dac_key_0_publ_key.c",
+    "examples/qorvo_dac_key_0_priv_key.c",
+    "examples/qorvo_dac_cert_0.c",
+    "examples/qorvo_dac_key_1_publ_key.c",
+    "examples/qorvo_dac_key_1_priv_key.c",
+    "examples/qorvo_dac_cert_1.c",
+    "examples/qorvo_dac_key_2_publ_key.c",
+    "examples/qorvo_dac_key_2_priv_key.c",
+    "examples/qorvo_dac_cert_2.c",
+    "examples/qorvo_dac_key_3_publ_key.c",
+    "examples/qorvo_dac_key_3_priv_key.c",
+    "examples/qorvo_dac_cert_3.c",
+    "examples/qorvo_dac_key_4_publ_key.c",
+    "examples/qorvo_dac_key_4_priv_key.c",
+    "examples/qorvo_dac_cert_4.c",
+    "examples/qorvo_cd.c",
+    "FactoryDataProvider.cpp",
+    "FactoryDataProvider.h",
     "InetPlatformConfig.h",
     "Logging.cpp",
     "OTAImageProcessorImpl.cpp",
@@ -51,6 +72,8 @@ static_library("qpg") {
   ]
 
   deps = []
+
+  public = [ "${chip_root}/src/credentials/DeviceAttestationCredsProvider.h" ]
 
   public_deps = [ "${chip_root}/src/platform:platform_base" ]
 
